[CWOD-Vampire] Correct vertical spacing a little bit

--- a/CWOD-Vampire/Vampire.css
+++ b/CWOD-Vampire/Vampire.css
@@ -30,6 +30,7 @@ h2, h3 {
 .sheet-info-grid > label {
     width: 12ch;
     margin: 2px 1ch 2px 2px;
+    padding-top: 0px;
     padding-bottom: 0px;
     padding-right: 0px;
 }
@@ -139,6 +140,10 @@ h2, h3 {
 
 .sheet-other-grid > div:nth-of-type(3) > div > textarea {
     height: 2.5em;
+}
+
+.sheet-other-grid h3 {
+    margin-top: 0.5em;
 }
 
 /* Traits and Paths */
